chapter_argo-rollouts/app/blue-green/preview-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-preview-httproute
spec:
  parentRefs:
  - name: handson-gateway
    namespace: gateway
    sectionName: http
  hostnames:
  - app-preview.argocd.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: handson-preview
      port: 80
